# flowgen

./: .env.example  .gitignore  .prettierrc  README.md  docker-compose.yml  knip.json  opencode.json  package.json  pnpm-lock.yaml
apps/backend/: .gitignore  AGENTS.md  alembic.ini  eslint.config.js  main.py  package.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 7df18a9110ac_init.py
apps/backend/app/: database.py  models.py
apps/backend/src/: app.ts  index.ts
apps/backend/src/db/: index.ts  schema.ts
apps/backend/src/db/migrations/: 0000_bright_absorbing_man.sql  0001_grey_black_widow.sql  (+4 more)
apps/backend/src/routes/: explore.ts  flows.ts  recordings.ts  settings.ts
apps/backend/src/scripts/: seed-demo-data.ts
apps/backend/src/services/: demo-seed.ts  discoverer.ts  discovery-output.ts  explorer.ts  recordings.ts  scheduler.ts  structured-output.ts
apps/backend/src/types/: recordings.ts
apps/recorder-api/: .dockerignore  Dockerfile  package.json  pyproject.toml  recorder_api.py  requirements.txt
apps/web/: components.json  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  globals.css  main.tsx  routeTree.gen.ts
apps/web/src/components/: app-sidebar.tsx  nav-user.tsx
apps/web/src/data/: mock-flows.ts
apps/web/src/hooks/: use-flows.ts  use-recording.ts  use-settings.ts  use-sidebar-resize.ts
apps/web/src/lib/: api.ts  flow-status.ts
apps/web/src/routes/: __root.tsx  flows.tsx  help.tsx  index.tsx  settings.tsx
apps/web/src/types/: flow.ts
(+21 files in other folders)
