[project]
name = "recorder-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use[video]>=0.12.6",
    "fastapi>=0.116.0",
    "playwright>=1.54.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "sqids>=0.5.2",
    "uvicorn[standard]>=0.35.0",
]
